--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@mikro-orm/core": "^4.5.9",
+    "@mikro-orm/nestjs": "^4.3.1",
+    "@mikro-orm/postgresql": "^4.5.9",
+    "@mikro-orm/reflection": "^4.5.9",
+    "@mikro-orm/sql-highlighter": "^1.0.1",
     "@nestjs/common": "^8.2.4",
+    "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.2.4",
     "@nestjs/platform-fastify": "^8.2.4",
     "class-transformer": "^0.5.1",
@@ -26,6 +32,7 @@
     "rxjs": "^7.4.0"
   },
   "devDependencies": {
+    "@mikro-orm/cli": "^4.5.9",
     "@nestjs/cli": "^8.1.6",
     "@nestjs/schematics": "^8.0.5",
     "@types/node": "^17.0.2",
@@ -41,5 +48,12 @@
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/database/mikro-orm.config.ts",
+      "./dist/database/mikro-orm.config.js"
+    ]
   }
 }
