--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.2.4",
     "@nestjs/platform-fastify": "^8.2.4",
+    "chalk": "^4.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0"
@@ -35,6 +38,7 @@
     "@mikro-orm/cli": "^4.5.9",
     "@nestjs/cli": "^8.1.6",
     "@nestjs/schematics": "^8.0.5",
+    "@types/moment-duration-format": "^2.2.3",
     "@types/node": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
