chore: modify many utils

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.2.4",
     "@nestjs/platform-fastify": "^8.2.4",
+    "@ogma/nestjs-module": "^3.1.0",
+    "@ogma/platform-fastify": "^3.0.1",
     "chalk": "^4.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -46,6 +48,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
+    "rotating-file-stream": "^3.0.2",
     "source-map-support": "^0.5.21",
     "ts-jest": "^27.1.2",
     "ts-loader": "^9.2.6",
