--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-	"printWidth": 120,
+	"printWidth": 140,
 	"tabWidth": 4,
 	"useTabs": true,
 	"singleQuote": true,
 	"quoteProps": "as-needed",
-	"trailingComma": "all"
+	"trailingComma": "none",
+    "bracketSpacing": true
 }
