--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,16 @@
 {
-	"extends": ["github>posva/renovate-config"]
+  "extends": [
+    "config:base",
+    ":disablePeerDependencies",
+    ":disableDependencyDashboard",
+    "group:allNonMajor"
+  ],
+  "rangeStrategy": "bump",
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true,
+      "automergeStrategy": "squash"
+    }
+  ]
 }
