--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "warstars-next",
+  "name": "warstars-api-next",
   "version": "0.0.1",
-  "description": "",
-  "author": "Priyam <roy_priyam@outlook.com>",
+  "description": "API for WarStars",
+  "author": "Priyam",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -13,50 +13,38 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix"
+    "lint": "eslint \"{src,apps,libs}/**/*.ts\"",
+    "lint:fix": "eslint \"{src,apps,libs}/**/*.ts\" --fix"
   },
   "dependencies": {
-    "@mikro-orm/core": "^4.5.10",
-    "@mikro-orm/nestjs": "^4.3.1",
-    "@mikro-orm/postgresql": "^4.5.10",
     "@nestjs/common": "^8.2.4",
-    "@nestjs/config": "^1.1.5",
+    "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.2.4",
     "@nestjs/platform-fastify": "^8.2.4",
+    "@ogma/nestjs-module": "^3.1.1",
+    "@ogma/platform-fastify": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "fastify": "^3.25.3",
+    "fastify-cookie": "^5.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.4.0"
+    "rotating-file-stream": "^3.0.2",
+    "rxjs": "^7.5.1"
   },
   "devDependencies": {
-    "@mikro-orm/cli": "^4.5.10",
-    "@mikro-orm/reflection": "^4.5.10",
-    "@mikro-orm/sql-highlighter": "^1.0.1",
     "@nestjs/cli": "^8.1.6",
     "@nestjs/schematics": "^8.0.5",
-    "@ogma/nestjs-module": "^3.1.0",
-    "@ogma/platform-fastify": "^3.0.1",
     "@types/node": "^17.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
-    "eslint": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
-    "rotating-file-stream": "^3.0.2",
-    "source-map-support": "^0.5.21",
-    "ts-jest": "^27.1.2",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/database/mikro-orm.config.ts",
-      "./dist/database/mikro-orm.config.js"
-    ]
   }
 }
