--- a/package.json
+++ b/package.json
@@ -17,25 +17,30 @@
     "lint:fix": "eslint \"{src,apps,libs}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@deepkit/type": "^1.0.1-alpha.59",
     "@nestjs/common": "^8.2.4",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.2.4",
     "@nestjs/platform-fastify": "^8.2.4",
+    "@nestjs/typeorm": "^8.0.2",
     "@ogma/nestjs-module": "^3.1.1",
     "@ogma/platform-fastify": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "fastify": "^3.25.3",
     "fastify-cookie": "^5.5.0",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rotating-file-stream": "^3.0.2",
-    "rxjs": "^7.5.1"
+    "rxjs": "^7.5.1",
+    "typeorm": "^0.2.41"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.6",
     "@nestjs/schematics": "^8.0.5",
     "@types/node": "^17.0.5",
+    "@types/pg": "^8.6.3",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "eslint": "^8.6.0",
