--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@deepkit/type": "^1.0.1-alpha.59",
+    "@fastify/session": "^6.3.0",
     "@nestjs/common": "^8.2.4",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.2.4",
@@ -27,8 +28,11 @@
     "@ogma/platform-fastify": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "connect-typeorm": "^1.1.4",
+    "crypto-js": "^4.1.1",
     "fastify": "^3.25.3",
     "fastify-cookie": "^5.5.0",
+    "node-fetch": "2.6.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -39,7 +43,9 @@
   "devDependencies": {
     "@nestjs/cli": "^8.1.6",
     "@nestjs/schematics": "^8.0.5",
+    "@types/crypto-js": "^4.1.0",
     "@types/node": "^17.0.5",
+    "@types/node-fetch": "2.5.12",
     "@types/pg": "^8.6.3",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
