--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "rimraf": "^3.0.2",
     "rotating-file-stream": "^3.0.2",
     "rxjs": "^7.5.1",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "uid-safe": "^2.1.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.6",
@@ -47,6 +48,7 @@
     "@types/node": "^17.0.5",
     "@types/node-fetch": "2.5.12",
     "@types/pg": "^8.6.3",
+    "@types/uid-safe": "^2.1.2",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "eslint": "^8.6.0",
