--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "crypto-js": "^4.1.1",
     "fastify": "^3.25.3",
     "fastify-cookie": "^5.5.0",
+    "fastify-helmet": "^5.3.2",
     "node-fetch": "2.6.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
