--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nestjs/common": "^8.2.4",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.2.4",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-fastify": "^8.2.4",
     "@nestjs/typeorm": "^8.0.2",
     "@ogma/nestjs-module": "^3.1.1",
