--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs}/**/*.ts\"",
@@ -33,6 +33,7 @@
     "class-validator": "^0.13.2",
     "connect-typeorm": "^1.1.4",
     "crypto-js": "^4.1.1",
+    "discord-akairo": "github:csuvajit/discord-akairo#main",
     "discord.js": "^13.6.0",
     "fastify": "^3.25.3",
     "fastify-cookie": "^5.5.0",
@@ -60,12 +61,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
-    "run-script-webpack-plugin": "^0.0.11",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.5.4",
-    "webpack": "^5.66.0",
-    "webpack-node-externals": "^3.0.0"
+    "typescript": "^4.5.4"
   }
 }
