--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs}/**/*.ts\"",
@@ -22,7 +22,6 @@
     "@nestjs/common": "^8.2.5",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.2.5",
-    "@nestjs/event-emitter": "^1.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-fastify": "^8.2.5",
     "@nestjs/typeorm": "^8.0.2",
@@ -33,8 +32,6 @@
     "class-validator": "^0.13.2",
     "connect-typeorm": "^1.1.4",
     "crypto-js": "^4.1.1",
-    "discord-akairo": "github:csuvajit/discord-akairo#main",
-    "discord.js": "^13.6.0",
     "fastify": "^3.25.3",
     "fastify-cookie": "^5.5.0",
     "fastify-helmet": "^6.0.0",
@@ -61,9 +58,12 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
+    "run-script-webpack-plugin": "^0.0.11",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "webpack": "^5.66.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
