--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,30 @@
 version: '3.9'
 services:
-  warstars-api:
-    container_name: warstars-api
-    build:
-      context: .
-      dockerfile: Dockerfile
-    env_file:
-      - .env
-    ports:
-      - "${PORT}:${PORT}"
-    depends_on:
-      - postgres
-
   postgres:
-    image: postgres:13
-    container_name: warstars-postgres
+    image: postgres:14-alpine
+    container_name: WarStars-DB
     restart: always
     ports:
       - 5432:5432
     env_file:
       - .env
     volumes:
-      - postgres:/var/lib/postgresql/data
+      - warstars:/var/lib/postgresql/data
+    environment:
+      - PGDATA=/var/lib/postgresql/data
+
+  api:
+    container_name: WarStars-API
+    env_file:
+      - .env
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "${PORT}:${PORT}"
+    depends_on:
+      - postgres
 
 volumes:
-  postgres:
+  warstars:
     name: warstars-db
