--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,22 +4,31 @@ on:
   release:
     types: [published]
 jobs:
-  push_to_registry:
-    name: Push Docker image to GitHub Packages
+  build:
+    name: Build & Push
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
+      - name: Create SHA Container Tag
+        id: sha_tag
+        run: |
+          tag=$(cut -c 1-7 <<< $GITHUB_SHA)
+          echo "::set-output name=tag::$tag"
+
+      - name: Checkout code
         uses: actions/checkout@v2
       
-      - name: Log in to GitHub Docker Registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with:
-          registry: docker.pkg.github.com
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       
-      - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      - name: Login to Github Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN  }}
+      
+      - name: Build and push
+        uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
@@ -27,5 +36,7 @@ jobs:
           cache-from: type=registry,ref=ghcr.io/r-priyam/warstars-api:latest
           cache-to: type=inline
           tags: |
-            docker.pkg.github.com/${{ github.repository }}/warstars-api:${{ github.sha }}
-            docker.pkg.github.com/${{ github.repository }}/warstars-api:${{ github.event.release.tag_name }}
+            ghcr.io/r-priyam/warstars-api:latest
+            ghcr.io/r-priyam/warstars-api:${{ steps.sha_tag.outputs.tag }}
+          build-args: |
+            git_sha=${{ github.sha }}
