--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "uid-safe": "^2.1.5"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.16.1",
     "@nestjs/cli": "^8.2.0",
     "@nestjs/schematics": "^8.0.6",
     "@types/crypto-js": "^4.1.0",
