--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs}/**/*.ts\"",
-    "lint:fix": "eslint \"{src,apps,libs}/**/*.ts\" --fix",
+    "lint": "eslint \"**/*.{ts,js}\"",
+    "lint:fix": "eslint \"**/*.{ts,js}\" --fix",
     "release": "bumpp package.json package-lock.json --commit --push --tag"
   },
   "dependencies": {
