chore: remove rotating log files and config tweaks
chore: use custom volume for storing logs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "${PORT}:${PORT}"
+    volumes:
+      - ./logs:/logs
     depends_on:
       - postgres
 
