chore: add dev docker file

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,7 +3,7 @@ services:
   postgres:
     image: postgres:14-alpine
     container_name: warstars-database
-    restart: unless-stopped
+    restart: always
     ports:
       - "5433:5433"
     env_file:
@@ -14,13 +14,14 @@ services:
       - PGDATA=/var/lib/postgresql/data
 
   api:
-    image: ghcr.io/r-priyam/warstars-api:latest
     container_name: warstars-api
-    restart: unless-stopped
     env_file:
       - .env
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "${PORT}:${PORT}" 
+      - "${PORT}:${PORT}"
     volumes:
       - ./logs:/logs
     depends_on:
