--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,11 @@ jobs:
       - name: NPM Install
         run: npm i
 
-      - name: Run ESLint
+      - name: ESLint
         run: npm run lint
+
+      - name: Typecheck
+        run: npm run typecheck
 
       - name: Build
         run: npm run build
