chore: `warstars-api-next` -> `warstars-api`

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "warstars-api-next",
+  "name": "warstars-api",
   "version": "0.1.8",
   "description": "API for WarStars",
   "author": "Priyam",
