--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,21 @@
 version: '3.9'
+
+x-logging: &logging
+  logging:
+    driver: "json-file"
+    options:
+      max-file: "5"
+      max-size: "10m"
+
+x-restart-policy: &restart_policy
+  restart: unless-stopped
+
 services:
   postgres:
+    << : *logging
+    << : *restart_policy
     image: postgres:14-alpine
     container_name: warstars-database
-    restart: unless-stopped
     ports:
       - "5433:5433"
     env_file:
@@ -14,9 +26,10 @@ services:
       - PGDATA=/var/lib/postgresql/data
 
   api:
+    << : *logging
+    << : *restart_policy
     image: ghcr.io/r-priyam/warstars-api:latest
     container_name: warstars-api
-    restart: unless-stopped
     env_file:
       - .env
     ports:
