--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,20 +15,18 @@ services:
     << : *logging
     << : *restart_policy
     image: postgres:14-alpine
-    container_name: warstars-database
+    container_name: warstars_database
     ports:
       - "5433:5433"
     env_file:
       - .env
     volumes:
       - warstars:/var/lib/postgresql/data
-    environment:
-      - PGDATA=/var/lib/postgresql/data
 
   api:
     << : *logging
     << : *restart_policy
-    container_name: warstars-api
+    container_name: warstars_api
     env_file:
       - .env
     build:
