--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,21 +15,19 @@ services:
     << : *logging
     << : *restart_policy
     image: postgres:14-alpine
-    container_name: warstars-database
+    container_name: warstars_database
     ports:
       - "5433:5433"
     env_file:
       - .env
     volumes:
       - warstars:/var/lib/postgresql/data
-    environment:
-      - PGDATA=/var/lib/postgresql/data
 
   api:
     << : *logging
     << : *restart_policy
     image: ghcr.io/r-priyam/warstars-api:latest
-    container_name: warstars-api
+    container_name: warstars_api
     env_file:
       - .env
     ports:
