--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,6 +22,14 @@ services:
       - .env
     volumes:
       - warstars:/var/lib/postgresql/data
+  
+  redis:
+    << : *logging
+    << : *restart_policy
+    image: "redis:6.0.11-alpine"
+    container_name: warstars_redis
+    ports:
+      - "127.0.0.1:6379:6379"
 
   api:
     << : *logging
@@ -38,6 +46,7 @@ services:
       - ./logs:/logs
     depends_on:
       - postgres
+      - redis
 
 volumes:
   warstars:
