--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,14 @@ services:
       - .env
     volumes:
       - warstars:/var/lib/postgresql/data
+  
+  redis:
+    << : *logging
+    << : *restart_policy
+    image: "6.2.6-alpine"
+    container_name: warstars_redis
+    ports:
+      - "127.0.0.1:6379:6379"
 
   api:
     << : *logging
@@ -36,6 +44,7 @@ services:
       - ./logs:/logs
     depends_on:
       - postgres
+      - redis
 
 volumes:
   warstars:
