--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "fastify-helmet": "^7.0.1",
     "node-fetch": "2.6.7",
     "pg": "^8.7.3",
+    "redis": "^4.0.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.4",
