--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
   redis:
     << : *logging
     << : *restart_policy
-    image: "6.2.6-alpine"
+    image: "redis:6.2.6-alpine"
     container_name: warstars_redis
     ports:
       - "127.0.0.1:6379:6379"
