chore: set up docker for dev mode and run prettier

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,51 @@
 version: '3.9'
 
 x-logging: &logging
-  logging:
-    driver: "json-file"
-    options:
-      max-file: "5"
-      max-size: "10m"
+    logging:
+        driver: 'json-file'
+        options:
+            max-file: '5'
+            max-size: '10m'
 
 x-restart-policy: &restart_policy
-  restart: unless-stopped
+    restart: unless-stopped
 
 services:
-  postgres:
-    << : *logging
-    << : *restart_policy
-    image: postgres:14-alpine
-    container_name: warstars_database
-    ports:
-      - "5433:5433"
-    env_file:
-      - .env
-    volumes:
-      - warstars:/var/lib/postgresql/data
-  
-  redis:
-    << : *logging
-    << : *restart_policy
-    image: "redis:6.2.6-alpine"
-    container_name: warstars_redis
-    ports:
-      - "127.0.0.1:6379:6379"
+    postgres:
+        <<: *logging
+        <<: *restart_policy
+        image: postgres:14-alpine
+        container_name: warstars_database
+        ports:
+            - '5433:5433'
+        env_file:
+            - .env
+        volumes:
+            - warstars:/var/lib/postgresql/data
 
-  api:
-    << : *logging
-    << : *restart_policy
-    image: ghcr.io/r-priyam/warstars-api:latest
-    container_name: warstars_api
-    env_file:
-      - .env
-    ports:
-      - "${PORT}:${PORT}" 
-    volumes:
-      - ./logs:/logs
-    depends_on:
-      - postgres
-      - redis
+    redis:
+        <<: *logging
+        <<: *restart_policy
+        image: 'redis:6.2.6-alpine'
+        container_name: warstars_redis
+        ports:
+            - '127.0.0.1:6379:6379'
+
+    api:
+        <<: *logging
+        <<: *restart_policy
+        image: ghcr.io/r-priyam/warstars-api:latest
+        container_name: warstars_api
+        env_file:
+            - .env
+        ports:
+            - '${PORT}:${PORT}'
+        volumes:
+            - ./logs:/logs
+        depends_on:
+            - postgres
+            - redis
 
 volumes:
-  warstars:
-    name: warstars
+    warstars:
+        name: warstars
