--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,51 +1,48 @@
 version: '3.9'
 
 x-logging: &logging
-  logging:
-    driver: "json-file"
-    options:
-      max-file: "1"
-      max-size: "10m"
+    logging:
+        driver: 'json-file'
+        options:
+            max-file: '1'
+            max-size: '5m'
 
 x-restart-policy: &restart_policy
-  restart: unless-stopped
+    restart: unless-stopped
 
 services:
-  postgres:
-    << : *logging
-    << : *restart_policy
-    image: postgres:14-alpine
-    container_name: warstars_database
-    ports:
-      - "5433:5433"
-    env_file:
-      - .env
-    volumes:
-      - warstars:/var/lib/postgresql/data
-  
-  redis:
-    << : *logging
-    << : *restart_policy
-    image: "redis:6.2.6-alpine"
-    container_name: warstars_redis
-    ports:
-      - "127.0.0.1:6379:6379"
+    postgres:
+        <<: *logging
+        <<: *restart_policy
+        image: postgres:14-alpine
+        container_name: warstars_database
+        ports:
+            - '5433:5433'
+        env_file:
+            - .env
+        volumes:
+            - warstars:/var/lib/postgresql/data
 
-  api:
-    << : *logging
-    << : *restart_policy
-    container_name: warstars_api
-    env_file:
-      - .env
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "${PORT}:${PORT}"
-    depends_on:
-      - postgres
-      - redis
+    redis:
+        <<: *logging
+        <<: *restart_policy
+        image: 'redis:6.2.6-alpine'
+        container_name: warstars_redis
+        ports:
+            - '127.0.0.1:6379:6379'
+
+    api:
+        <<: *logging
+        container_name: warstars_api
+        image: node:16.14-alpine
+        volumes:
+            - .:/app:rw
+        working_dir: /app
+        command: npm run start:dev
+        depends_on:
+            - postgres
+            - redis
 
 volumes:
-  warstars:
-    name: warstars
+    warstars:
+        name: warstars
