--- a/package.json
+++ b/package.json
@@ -1,67 +1,67 @@
 {
-  "name": "warstars-api",
-  "version": "0.1.8",
-  "description": "API for WarStars",
-  "author": "Priyam",
-  "private": true,
-  "license": "MIT",
-  "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"**/*.{ts,js}\"",
-    "lint:fix": "eslint \"**/*.{ts,js}\" --fix",
-    "typecheck": "tsc --noemit",
-    "release": "bumpp package.json package-lock.json --commit --push --tag"
-  },
-  "dependencies": {
-    "@fastify/session": "^6.4.0",
-    "@nestjs/common": "^8.4.0",
-    "@nestjs/config": "^1.2.0",
-    "@nestjs/core": "^8.4.0",
-    "@nestjs/event-emitter": "^1.1.0",
-    "@nestjs/jwt": "^8.0.0",
-    "@nestjs/platform-fastify": "^8.4.0",
-    "@nestjs/typeorm": "^8.0.3",
-    "@ogma/nestjs-module": "^3.2.0",
-    "@ogma/platform-fastify": "^3.0.1",
-    "clashofclans.js": "^2.6.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "connect-typeorm": "^1.1.4",
-    "crypto-js": "^4.1.1",
-    "discord-akairo": "github:csuvajit/discord-akairo#main",
-    "discord.js": "^13.6.0",
-    "fastify-cookie": "^5.6.0",
-    "fastify-helmet": "^7.0.1",
-    "node-fetch": "2.6.7",
-    "pg": "^8.7.3",
-    "redis": "^4.0.4",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.5.4",
-    "typeorm": "^0.2.45",
-    "uid-safe": "^2.1.5"
-  },
-  "devDependencies": {
-    "@antfu/eslint-config": "^0.16.1",
-    "@nestjs/cli": "^8.2.2",
-    "@nestjs/schematics": "^8.0.7",
-    "@types/crypto-js": "^4.1.1",
-    "@types/node": "^17.0.21",
-    "@types/node-fetch": "2.6.1",
-    "@types/pg": "^8.6.4",
-    "@types/uid-safe": "^2.1.2",
-    "bumpp": "^7.1.1",
-    "eslint": "^8.10.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "prettier": "^2.5.1",
-    "typescript": "^4.6.2"
-  }
+    "name": "warstars-api",
+    "version": "0.1.8",
+    "description": "API for WarStars",
+    "author": "Priyam",
+    "private": true,
+    "license": "MIT",
+    "scripts": {
+        "prebuild": "rimraf dist",
+        "build": "nest build",
+        "format": "prettier --write .",
+        "start": "nest start",
+        "start:dev": "nest start --watch",
+        "start:debug": "nest start --debug --watch",
+        "start:prod": "node dist/main",
+        "lint": "eslint \"**/*.{ts,js}\"",
+        "lint:fix": "eslint \"**/*.{ts,js}\" --fix",
+        "typecheck": "tsc --noemit",
+        "release": "bumpp package.json package-lock.json --commit --push --tag"
+    },
+    "dependencies": {
+        "@fastify/session": "^6.4.0",
+        "@nestjs/common": "^8.4.0",
+        "@nestjs/config": "^1.2.0",
+        "@nestjs/core": "^8.4.0",
+        "@nestjs/event-emitter": "^1.1.0",
+        "@nestjs/jwt": "^8.0.0",
+        "@nestjs/platform-fastify": "^8.4.0",
+        "@nestjs/typeorm": "^8.0.3",
+        "@ogma/nestjs-module": "^3.2.0",
+        "@ogma/platform-fastify": "^3.0.1",
+        "clashofclans.js": "^2.6.1",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.13.2",
+        "connect-typeorm": "^1.1.4",
+        "crypto-js": "^4.1.1",
+        "discord-akairo": "github:csuvajit/discord-akairo#main",
+        "discord.js": "^13.6.0",
+        "fastify-cookie": "^5.6.0",
+        "fastify-helmet": "^7.0.1",
+        "node-fetch": "2.6.7",
+        "pg": "^8.7.3",
+        "redis": "^4.0.4",
+        "reflect-metadata": "^0.1.13",
+        "rimraf": "^3.0.2",
+        "rxjs": "^7.5.4",
+        "typeorm": "^0.2.45",
+        "uid-safe": "^2.1.5"
+    },
+    "devDependencies": {
+        "@antfu/eslint-config": "^0.16.1",
+        "@nestjs/cli": "^8.2.2",
+        "@nestjs/schematics": "^8.0.7",
+        "@types/crypto-js": "^4.1.1",
+        "@types/node": "^17.0.21",
+        "@types/node-fetch": "2.6.1",
+        "@types/pg": "^8.6.4",
+        "@types/uid-safe": "^2.1.2",
+        "bumpp": "^7.1.1",
+        "eslint": "^8.10.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-simple-import-sort": "^7.0.0",
+        "prettier": "^2.5.1",
+        "typescript": "^4.6.2"
+    }
 }
