--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -38,6 +38,8 @@ services:
         volumes:
             - .:/app:rw
         working_dir: /app
+        ports:
+            - "8888:8888"
         command: npm run start:dev
         depends_on:
             - postgres
