--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
     "name": "warstars-api",
     "version": "0.1.9",
-    "description": "API for WarStars",
-    "author": "Priyam",
     "private": true,
+    "description": "API for WarStars",
     "license": "MIT",
+    "author": "Priyam",
     "scripts": {
         "prebuild": "rimraf dist",
         "build": "nest build",
         "format": "prettier --write .",
-        "start": "nest start",
-        "start:dev": "nest start --watch",
-        "start:debug": "nest start --debug --watch",
-        "start:prod": "node dist/main",
         "lint": "eslint \"**/*.{ts,js}\"",
         "lint:fix": "eslint \"**/*.{ts,js}\" --fix",
-        "typecheck": "tsc --noemit",
-        "release": "bumpp package.json package-lock.json --commit --push --tag"
+        "release": "bumpp package.json package-lock.json --commit --push --tag",
+        "start": "nest start",
+        "start:debug": "nest start --debug --watch",
+        "start:dev": "nest start --watch",
+        "start:prod": "node dist/main",
+        "typecheck": "tsc --noemit"
     },
     "dependencies": {
         "@fastify/session": "^6.4.0",
