--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
         env_file:
             - .env
         ports:
-            - '8000:8000'
+            - '${PORT}:${PORT}'
         volumes:
             - ./logs:/logs
         depends_on:
