--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,21 @@ x-restart-policy: &restart_policy
     restart: unless-stopped
 
 services:
+    nginx:
+        <<: *logging
+        <<: *restart_policy
+        image: nginx:1.21.6-alpine
+        container_name: nginx_server
+        volumes:
+            - ./nginx/nginx.dev.conf:/etc/nginx/conf.d/default.conf
+        ports:
+            - '80:80'
+            - '443:443'
+        depends_on:
+            - api
+        networks:
+            - warstars
+
     postgres:
         <<: *logging
         <<: *restart_policy
@@ -22,6 +37,8 @@ services:
             - .env
         volumes:
             - warstars:/var/lib/postgresql/data
+        networks:
+            - warstars
 
     redis:
         <<: *logging
@@ -30,6 +47,8 @@ services:
         container_name: warstars_redis
         ports:
             - '127.0.0.1:6379:6379'
+        networks:
+            - warstars
 
     api:
         <<: *logging
@@ -45,7 +64,13 @@ services:
         depends_on:
             - postgres
             - redis
+        networks:
+            - warstars
 
 volumes:
     warstars:
         name: warstars
+
+networks:
+  warstars:
+    driver: bridge
