--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
         image: nginx:1.21.6-alpine
         container_name: nginx_server
         volumes:
-            - ./nginx/nginx.dev.conf:/etc/nginx/conf.d/default.conf
+            - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
         ports:
             - '80:80'
             - '443:443'
