--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,9 @@ services:
         image: nginx:1.21.6-alpine
         container_name: nginx_server
         volumes:
-            - ./nginx/nginx.conf:/nginx/nginx.conf
-            - ./nginx/cert.pem:/nginx/cert.pem
-            - ./nginx/key.pem:/nginx/key.pem
+            - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+            - ./nginx/cert.pem:/etc/nginx/cert.pem
+            - ./nginx/key.pem:/etc/nginx/key.pem
         ports:
             - '80:80'
             - '443:443'
