--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,8 +3,8 @@ server {
     listen 443 ssl;
     server_name api.priyam.tech;
 
-    ssl_certificate cert.pem;
-    ssl_certificate_key key.pem;
+    ssl_certificate /etc/nginx/cert.pem;
+    ssl_certificate_key /etc/nginx/key.pem;
 
     if ($host != "api.priyam.tech") {
         return 404;
