--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,6 +11,20 @@ x-restart-policy: &restart_policy
     restart: unless-stopped
 
 services:
+    nginx:
+        <<: *logging
+        <<: *restart_policy
+        image: nginx:1.21.6-alpine
+        container_name: nginx_server
+        volumes:
+            - ./nginx/nginx.dev.conf:/etc/nginx/conf.d/default.conf
+        ports:
+            - '80:80'
+        depends_on:
+            - api
+        networks:
+            - warstars
+
     postgres:
         <<: *logging
         <<: *restart_policy
@@ -22,6 +36,8 @@ services:
             - .env
         volumes:
             - warstars:/var/lib/postgresql/data
+        networks:
+            - warstars
 
     redis:
         <<: *logging
@@ -30,21 +46,29 @@ services:
         container_name: warstars_redis
         ports:
             - '127.0.0.1:6379:6379'
+        networks:
+            - warstars
 
     api:
         <<: *logging
-        container_name: warstars_api
         image: node:16.14-alpine
+        container_name: warstars_api
         volumes:
             - .:/app:rw
         working_dir: /app
         ports:
-            - '8888:8888'
+            - '${PORT}:${PORT}'
         command: npm run start:dev
         depends_on:
             - postgres
             - redis
+        networks:
+            - warstars
 
 volumes:
     warstars:
         name: warstars
+
+networks:
+  warstars:
+    driver: bridge
