--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,7 @@
+upstream api {
+    server api:8000;
+}
+
 server {
     listen 80;
     listen 443 ssl;
@@ -12,6 +16,6 @@ server {
 
     location / {
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://api;
     }
 }
