--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,10 +15,7 @@ server {
     }
 
     location / {
-        add_header 'Access-Control-Allow-Origin' 'https://warstars.priyam.tech';
-        add_header 'Access-Control-Allow-Credentials' 'true';
-        add_header 'Access-Control-Allow-Methods' 'GET, HEAD, PUT, PATCH, POST, DELETE';
-        add_header 'Access-Control-Allow-Headers' 'Accept,Content-Type';
+        rewrite ^/api/(.*) /$1 break;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
