--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,5 +21,9 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_pass http://api;
+        add_header 'Access-Control-Allow-Origin' 'https://warstars.priyam.tech';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Methods' 'GET, HEAD, PUT, PATCH, POST, DELETE';
+        add_header 'Access-Control-Allow-Headers' 'Accept,Content-Type';
     }
 }
