--- a/package.json
+++ b/package.json
@@ -62,5 +62,6 @@
         "eslint-plugin-simple-import-sort": "^7.0.0",
         "prettier": "^2.6.2",
         "typescript": "^4.6.3"
-    }
+    },
+    "packageManager": "yarn@3.2.0"
 }
